src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scrollbar-width: none;
  scroll-behavior: smooth;
}

.logo {
  color: #950000;
  font-weight: bold;
  font-size: larger;
}

.hero-section {
  background-image: url("./assets/Watch-Free-Hero-2048x1152-1-1024x576.png");
  height: 80vh;
  color: #cecece;
  display: flex;
  padding: 15px;
  opacity: 0.9;
  flex-direction: column;
  justify-content: space-evenly;
}

.home-container {
  /* background: linear-gradient(
    to left,
    rgba(0, 0, 230, 0.374),
    rgba(255, 0, 0, 0.319)
  ); */
  background-color: #cecece;
  width: 100vw;
}

.hero-con {
  display: flex;
  margin: auto;
  font-size: larger;
  font-weight: 700;
  flex-direction: column;
  gap: 20px;
  justify-content: left;
}

.explore-btn {
  text-decoration: none;
  color: #ccc;
  border: 1px solid #950000;
  background-color: #950000;
  padding: 5px 20px;
  margin-top: 10px;
  border-radius: 8px;
  font-size: larger;
  font-weight: 500;
}

/* .heading {
  background: transparent;
  padding: 10px;
  color: #a00000;
  margin: 0px auto;
  font-size: larger;
  font-weight: bold;
} */
.heading {
  color: #a00000;
  font-size: larger;
  margin-top: 10px;
}

.main-container .heading {
  background-color: #ebebeb;
  padding: 10px;
  color: #a00000;
}

.menu-btn {
  color: #a00000;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 15px;
  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
  background: linear-gradient(
    to left,
    rgba(0, 0, 230, 0.532),
    rgba(255, 0, 0, 0.586)
  );

  list-style: none;

  font-size: large;
}

.header-main {
  position: sticky;
  top: 0;
  z-index: 1000;
}

.headerlist {
  text-decoration: none;
  color: #a00000;
  padding: 5px 8px;
  border-radius: 10px;
}

.list-container {
  display: flex;
  justify-content: center;
}

.headerlist:hover {
  background-color: #a00000c9;
  color: #fff;
}

.header ul {
  list-style: none;
  display: flex;
  gap: 20px;
}

.header__right {
  display: flex;
  gap: 30px;
}

.header ul li:hover {
  text-decoration: none;
  list-style: none;
}

.header ul li a {
  text-decoration: none;
  color: var(--text);
  font-weight: 500;
}

.search-bar {
  display: flex;
  padding: 10px;
  width: auto;
}

.search-btn {
  padding:3px;
  border-radius: 5px 0px 0px 5px;
  border: 1px solid #a91e1e;
}

.search-bar .TextField:focus {
  outline: #a00000;
  border: 1px solid #db1e1e;
}

.search-container {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
}

.search-bar button {
  padding: 10px;
  border-radius: 0px 5px 5px 0px;
  border: none;
  background-color: #a00000;
  color: #fff;
  cursor: pointer;
}

.card {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 10px;
  gap: 20px;
  border-radius: 10px;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}

.login {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 20px;
  height: 92vh;
  background: linear-gradient(
    to left,
    rgba(0, 0, 230, 0.374),
    rgba(255, 0, 0, 0.319)
  );
}

.login-form {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  gap: 22px;
  margin: auto;
  width: 50vw;
  padding: 10px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.search-form {
  display: flex;
  justify-content: center;
  align-items: center;
}

.TextField {
  border: 1px solid #a00000;
  padding: 5px;
  border-radius: 5px 0px 0px 5px;
}
.TextField:active {
  outline: #a00000;
  border: none;
  color: #a00000;
}

Button {
  padding: 10px;
  border-radius: 5px;
  border: none;
  background-color: #a00000;
  color: #fff;
  cursor: pointer;
  list-style: none;
}

Button:hover {
  opacity: 0.8;
}

.register {
  text-decoration: underline;
}

.register:hover {
  color: #950000;
}

Button:focus {
  outline: none;

}



.details-info {
  display: flex;
  flex-direction: column;
  color: #a00000;
  align-items: center;
  border-radius: 14px;
  flex-wrap: wrap;
 gap: 2px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* .movie-card .details-info {
  display: flex;
  align-items: center;
  margin: auto;
  justify-content: space-evenly;
  flex-wrap: wrap;
  gap: 20px;
} */
/* 
.movie-card img {
  object-fit: cover;
  width: 100%;
  height: 30em;
  border-radius: 10px;
} */

.header-item {
  text-decoration: none;
}

.movie-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4px;
  padding: 8px;
  border-radius: 10px;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}

.detail-main-con {
  background: linear-gradient(
    to left,
    rgba(0, 0, 230, 0.374),
    rgba(255, 0, 0, 0.319)
  );
  height: 100%;
}

.detail-card {
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  padding: 10px;
  width: 100%;
  border-radius: 10px;
}

.img-con {
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  display: flex;
}

.img-con img {
  width: 100%;
  object-fit: cover;

  background-size: contain;
}

.detail-card img {
  object-fit: cover;
  width: 50%;
}

.series-card {
  padding: 10px;
  cursor: pointer;
  color: #a00000;
  object-fit: cover;
}

.series-card img {
  border-radius: 10px;
  object-fit: cover;
}

.movie-card:hover {
  box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
  transition: all 1s ease;
  transform: scale(1.01);
}

.series-card:hover {
  box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
  transition: all 1s ease;
  transform: scale(1.01);
}

.Episode-card:hover {
  box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
  transition: all 1s ease;
  transform: scale(1.01);
}

.Episode-card {
  padding: 8px;
  border-radius: 10px;
}

.Episode-card img {
  object-fit: cover;
  border-radius: 10px;
}

.movies-container {
  display: flex;
  flex-wrap: wrap;
  width: 90%;
  margin: auto;
}

.series-main-container {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: #a00000;
  margin: auto;
  width: 90%;
}

.episode-main-container {
  margin: auto;
  width: 90%;
  margin-top: 10px;
  background: transparent;
}

.series-container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin: auto;
  text-align: center;
  gap: 20px;
  margin-top: 5px;
  overflow-x: hidden;
  width: 90%;
}

.series-container Link {
  text-decoration: none;
}

.movie-container h1 {
  margin: auto;
  display: flex;

  align-items: center;
  width: 100%;
  gap: 10px;
  cursor: pointer;
}

.details-info h1 {
  font-weight: 500;
  font-size: xx-large;
}

.card-con {
  text-decoration: none;
  color: #a00000;
  padding: 5px;
  display: flex;
  flex-direction: column;
  width: auto;

  height: auto;
  gap: 20px;
}

.movie-container {

  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: auto;
  text-align: center;
  gap: 30px;
  justify-content: space-evenly;
  margin-top: 5px;
 
}

.cards {
  text-decoration: none;
  color: #a00000;
  padding: 5px;

  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin: auto;
  gap: 10px;
  cursor: pointer;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

.details-cards {
  text-decoration: none;
  color: #a00000;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  width: auto;
  margin: auto;
  gap: 20px;
  background-color: #cecece;
}

.ListItem {
  color: #a00000;
}

.login-head {
  font-size: xx-large;

  color: #a00000;
  letter-spacing: 6px;
  font-weight: bold;
}

.login-inputs {
  display: flex;
  flex-direction: column;

  justify-content: space-evenly;

  gap: 25px;
  margin-top: 25px;
}

.Text {
  font-weight: 500;
  font-size: larger;
  color: #a00000;
}

/*details-page-css*/
.movie-title {
  font-size: xX-large;
  box-shadow: 0px 1px rgba(0, 0, 0, 0.3);
  color: #a00000;

  font-weight: bold;

  padding: 8px;
}

.wishlist {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 10px;
  justify-content: center;
}

.wishlistbtn {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  color: #a00000;
  cursor: pointer;
}

.wishlistbtn:hover {
  color: #da0202;
  cursor: pointer;
}

.load {
  font-size: x-large;
  color: #a00000;
}

.rating {
  display: flex;
  align-items: center;
  gap: 8px;
  margin-top: 5px;
}

.page-container {
  display: flex;
  gap: 20px;
  justify-content: center;
  align-items: center;
}

